Ejercicio4 casi entero

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@
 /Examen 2/Ejercicio2.JSP/nbproject/private/
 /Examen 2/WebApplication1/nbproject/private/
 /Examen 2/WebApplication2/nbproject/private/
+/Examen 2/DisponibilidadAjax/nbproject/private/
+/Examen 2/Ejercicio1Ajax/nbproject/private/
+/Examen 2/Ejercicio1Ajax/build/
+/Examen 2/Ejercicio1Ajax/dist/
+/Examen 2/Ejercicio4JSP/nbproject/private/
+/Examen 2/Ejercicio4JSP/build/
