--- a/Examen 2/Ejercicio3JSP/nbproject/project.properties
+++ b/Examen 2/Ejercicio3JSP/nbproject/project.properties
@@ -26,8 +26,8 @@ dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
-file.reference.mysql-connector-j-8.0.31.jar=C:\\Users\\alber\\OneDrive\\Escritorio\\conector_mysql\\mysql-connector-j-8.0.31.jar
-file.reference.mysql-connector-java-5.1.0-bin.jar=C:\\Users\\alber\\OneDrive\\Escritorio\\conector_mysql\\mysql-connector-java-5.1.0-bin.jar
+file.reference.mysql-connector-j-8.0.31.jar=C:\\Users\\Dani_\\OneDrive\\Escritorio\\conector_mysql\\mysql-connector-j-8.0.31.jar
+file.reference.mysql-connector-java-5.1.0-bin.jar=C:\\Users\\Dani_\\OneDrive\\Escritorio\\conector_mysql\\mysql-connector-java-5.1.0-bin.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
